--- a/index.html
+++ b/index.html
@@ -42,6 +42,34 @@
         </ul>
     </div>
 
+      <div class="col-7" id="weather-container">
+      <div class="row mr-0">
+          <div class="col-12 border border-dark m-3 rounded">
+              <div class="row">
+                  <div class="col-12">
+                      <span id="city-name" class="city-name align-middle"></span>
+                      <!-- <img id="current-pic" src="placeholder" alt=""> -->
+                      <p id="temperature"></p>
+                      <p id="humidity"></p>
+                      <p id="wind-speed"></p>
+                      <p id="UV-index"></p>
+                  </div>
+              </div>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col-12">
+              <h3>5-Day Forecast</h3>
+          </div>
+      </div>
+      <div class="row">
+          <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
+          <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
+          <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
+          <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
+          <div class="col forecast bg-primary text-white ml-3 mb-3 rounded"></div>
+      </div>
+    </div>
     </main>
     
 
