--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   
   <body>
     <header>
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <nav id="nav-bar" class="navbar navbar-expand-lg">
         <span class="navbar-brand mb-0 h1 w-100 text-center"
           >Weather Dashboard</span
         >
