--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="container">
         <div class="row">
           <div class="col-5">
-            <h3 class="search-header my-1">Search for a city</h3>
+            <h3 class="search-header my-4">Search for a city:</h3>
             <form id="city-form" class="d-flex">
                 <div class="input-group mb-3">
                     <input id="city-input" type="text" class="form-control me-2" placeholder="Enter city name" />
@@ -48,7 +48,7 @@
               <div class="row">
                   <div class="col-12">
                       <span id="city-name" class="city-name align-middle"></span>
-                      <!-- <img id="current-pic" src="placeholder" alt=""> -->
+                      <img id="current-icon"  alt=""></img> 
                       <p id="temperature"></p>
                       <p id="humidity"></p>
                       <p id="wind-speed"></p>
