--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       
       <section id="search-bar" class="container">
         <div class="row">
-          <div class="col-5">
+          <div class="col-md-6">
             <h3 class="search-header my-4">Search for a city:</h3>
             <form id="city-form" class="d-flex">
                 <div class="input-group mb-3">
@@ -46,7 +46,7 @@
       <div class="row mr-0">
           <div class="col-12 border border-dark m-3 rounded">
               <div class="row">
-                  <div class="col-12">
+                  <div class="col-12 current">
                       <span id="city-name" class="city-name align-middle"></span>
                       <img id="current-icon"  alt=""></img> 
                       <p id="temperature"></p>
