--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Bootstrap CSS only -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <link rel="stylesheet" href="./assets/css/style.css" />
     <title>Weather Dashboard</title>
@@ -19,30 +18,25 @@
       </nav>
     </header>
 
-    <main class="container-fluid flex-row">
-      
-      <section id="search-bar" class="container">
-        <div class="row">
-          <div class="col-md-6">
+    <main class="container">
+      <section id="search-bar" class="row align-items-start">
+          <div class="col">
             <h3 class="search-header my-4">Search for a city:</h3>
             <form id="city-form" class="d-flex">
                 <div class="input-group mb-3">
-                    <input id="city-input" type="text" class="form-control me-2" placeholder="Enter city name" />
+                  <input id="city-input" type="text" class="form-control" placeholder="Enter city name" />
+                  <div class="input-group-append">
                     <button class="btn btn-primary" type="submit" id="search-button"> Submit
                     <i class="fas fa-search"></i>
                     </button>
+                  </div>
                 </div>
             </form>
-          </div> 
-          <!--Could potentially add another div with a button to clear search history here-->
-        </div>
-      </section>
       <div>
         <ul class="list-group" id="city-List">
         </ul>
-    </div>
-
-      <section class="col-7" id="weather-container">
+      </div>
+      <div class="row align-items-center" id="weather-container">
       <div class="row mr-0">
           <div class="col-12 border border-dark m-3 rounded">
               <div class="row">
@@ -57,9 +51,10 @@
               </div>
           </div>
       </div>
-      </section>
+      </div>
+    </section>
 
-      <section>
+    <section>
       <div class="row">
           <div class="col-12">
               <h3>5-Day Forecast</h3>
